--- a/Widgets_AdvancedStart/WebFolder/components/04_SharedCode.waComponent/04_SharedCode.html
+++ b/Widgets_AdvancedStart/WebFolder/components/04_SharedCode.waComponent/04_SharedCode.html
@@ -1,4 +1,5 @@
 ﻿<!DOCTYPE html><section data-group="[]" class="default">
     <meta name="generator" content="Wakanda GUIDesigner"/>
-	<div id="{id}richText1" data-type="richText" data-lib="WAF" class="waf-widget waf-richText default inherited    waf-richText-level-0 waf-level-0 " data-autoWidth="true" data-label-position="left" data-target="_blank" data-overflow="Hidden" data-plainText="true" data-constraint-left="true" data-label="" data-constraint-top="true">04_SharedCode.waComponent</div>
+	<div id="{id}richText1" data-type="richText" data-target="_blank" data-plainText="true" data-overflow="Hidden" data-lib="WAF" data-label-position="left" data-label="" data-constraint-top="true" data-constraint-left="true" data-autoWidth="true" class="waf-widget waf-richText default inherited    waf-richText-level-0 waf-level-0 ">04_SharedCode.waComponent</div>
+				<button id="{id}button1" data-type="button" data-lib="WAF" class="waf-widget waf-button default inherited    waf-button-level-0 waf-level-0 " data-action="simple" data-target="_blank" data-constraint-left="true" data-constraint-top="true" data-text="Alert Value"></button>
 	</section>
