--- a/Widgets_AdvancedStart/WebFolder/components/07_InterComponent1.waComponent/07_InterComponent1.html
+++ b/Widgets_AdvancedStart/WebFolder/components/07_InterComponent1.waComponent/07_InterComponent1.html
@@ -1,4 +1,6 @@
 ﻿<!DOCTYPE html><section data-group="[]" class="default">
     <meta name="generator" content="Wakanda GUIDesigner"/>
-	<div id="{id}richText1" data-type="richText" data-lib="WAF" class="waf-widget waf-richText default inherited    waf-richText-level-0 waf-level-0 " data-autoWidth="true" data-label-position="left" data-target="_blank" data-overflow="Hidden" data-plainText="true" data-constraint-left="true" data-label="" data-constraint-top="true">Inter Component 1</div>
+	<div id="{id}richText1" data-type="richText" data-target="_blank" data-plainText="true" data-overflow="Hidden" data-lib="WAF" data-label-position="left" data-label="" data-constraint-top="true" data-constraint-left="true" data-autoWidth="true" class="waf-widget waf-richText default inherited    waf-richText-level-0 waf-level-0 ">Inter Component 1</div>
+		<label id="{id}label1" for="{id}value1Input" data-valign="middle" data-type="label" data-margin="5" data-lib="WAF" data-constraint-top="true" data-constraint-left="true" class="waf-widget waf-label default inherited       waf-label-level-0 waf-level-0   waf-label-textField ">Set Value 1</label>
+		<input type="text" id="{id}value1Input" data-type="textField" data-password="false" data-multiline="false" data-lib="WAF" data-label-position="left" data-label="Set Value 1" data-datapicker-on="true" data-datapicker-icon-only="false" data-constraint-top="true" data-constraint-left="true" class="waf-widget waf-textField default inherited       waf-textField-level-0 waf-level-0 "/>
 	</section>
