--- a/Widgets_AdvancedStart/WebFolder/components/07_InterComponent2.waComponent/07_InterComponent2.html
+++ b/Widgets_AdvancedStart/WebFolder/components/07_InterComponent2.waComponent/07_InterComponent2.html
@@ -1,4 +1,6 @@
 ﻿<!DOCTYPE html><section data-group="[]" class="default">
     <meta name="generator" content="Wakanda GUIDesigner"/>
-	<div id="{id}richText1" data-type="richText" data-lib="WAF" class="waf-widget waf-richText default inherited    waf-richText-level-0 waf-level-0 " data-autoWidth="true" data-label-position="left" data-target="_blank" data-overflow="Hidden" data-plainText="true" data-constraint-left="true" data-label="" data-constraint-top="true">Inter Component 2</div>
+	<div id="{id}richText1" data-type="richText" data-target="_blank" data-plainText="true" data-overflow="Hidden" data-lib="WAF" data-label-position="left" data-label="" data-constraint-top="true" data-constraint-left="true" data-autoWidth="true" class="waf-widget waf-richText default inherited    waf-richText-level-0 waf-level-0 ">Inter Component 2</div>
+		<label id="{id}label1" data-type="label" data-lib="WAF" for="{id}setValue2Input" data-valign="middle" data-margin="5" class="waf-widget waf-label default inherited    waf-label-level-0 waf-level-0   waf-label-textField " data-constraint-left="true" data-constraint-top="true">Set Value 2</label>
+		<input id="{id}setValue2Input" data-type="textField" data-lib="WAF" type="text" class="waf-widget waf-textField default inherited    waf-textField-level-0 waf-level-0 " data-label="Set Value 2" data-label-position="left" data-multiline="false" data-password="false" data-datapicker-on="true" data-datapicker-icon-only="false" data-constraint-left="true" data-constraint-top="true"/>
 	</section>
